--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <style>
         .navbar-brand img {
             transition: transform 0.3s ease-in-out;
